ux: show date time format string

--- a/src/Views/Preference.axaml
+++ b/src/Views/Preference.axaml
@@ -71,7 +71,10 @@
                       SelectedIndex="{Binding DateTimeFormat, Mode=TwoWay}">
               <ComboBox.ItemTemplate>
                 <DataTemplate x:DataType="{x:Type m:DateTimeFormat}">
-                  <TextBlock FontFamily="{DynamicResource Fonts.Monospace}" Text="{Binding DisplayText}"/>
+                  <Grid ColumnDefinitions="*,8,*">
+                    <TextBlock Grid.Column="0" FontFamily="{DynamicResource Fonts.Monospace}" Text="{Binding DisplayText}"/>
+                    <TextBlock Grid.Column="2" FontFamily="{DynamicResource Fonts.Monospace}" Text="{Binding DateTime}" Foreground="{DynamicResource Brush.FG2}"/>
+                  </Grid>
                 </DataTemplate>
               </ComboBox.ItemTemplate>
             </ComboBox>
