refactor: date time format
- generate example dynamically
- update commit/author time in histories immediately after data time format changed

--- a/src/Views/Histories.axaml
+++ b/src/Views/Histories.axaml
@@ -191,7 +191,8 @@
                                            FontWeight="{Binding FontWeight}"
                                            Opacity="{Binding Opacity}"
                                            UseAuthorTime="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowAuthorTimeInGraph, Mode=OneWay}"
-                                           ShowAsDateTime="{Binding Source={x:Static vm:Preference.Instance}, Path=!DisplayTimeAsPeriodInHistories}"/>
+                                           ShowAsDateTime="{Binding Source={x:Static vm:Preference.Instance}, Path=!DisplayTimeAsPeriodInHistories}"
+                                           DateTimeFormat="{Binding Source={x:Static vm:Preference.Instance}, Path=DateTimeFormat}"/>
                   </Border>
                 </Grid>
               </DataTemplate>
