--- a/src/Views/Repository.axaml
+++ b/src/Views/Repository.axaml
@@ -231,7 +231,7 @@
 
           <!-- Tags -->
           <ToggleButton Grid.Row="4" Classes="group_expander" IsChecked="{Binding IsTagGroupExpanded, Mode=TwoWay}">
-            <Grid ColumnDefinitions="16,Auto,*,Auto,Auto">
+            <Grid ColumnDefinitions="16,Auto,*,Auto,Auto,Auto">
               <Path Grid.Column="0" Width="11" Height="11" Margin="2,1,0,0" HorizontalAlignment="Left" Data="{StaticResource Icons.Tags}" Fill="{DynamicResource Brush.FG2}"/>
               <TextBlock Grid.Column="1" Classes="group_header_label" Margin="0" Text="{DynamicResource Text.Repository.Tags}"/>
               <TextBlock Grid.Column="2" Text="{Binding Tags, Converter={x:Static c:ListConverters.ToCount}}" Foreground="{DynamicResource Brush.FG2}" FontWeight="Bold"/>
@@ -240,8 +240,16 @@
                             Width="14" 
                             IsChecked="{Binding Source={x:Static vm:Preference.Instance}, Path=ShowTagsAsTree, Mode=TwoWay}"
                             ToolTip.Tip="{DynamicResource Text.Repository.ShowTagsAsTree}"/>
-              <Button Grid.Column="4" 
-                      Classes="icon_button" 
+              <Button Grid.Column="4"
+                      Classes="icon_button"
+                      Width="14"
+                      Margin="8,0,0,0"
+                      Click="OnOpenSortTagMenu"
+                      ToolTip.Tip="{DynamicResource Text.Repository.Tags.Sort}">
+                <Path Width="12" Height="12" Margin="0,2,0,0" Data="{StaticResource Icons.Order}"/>
+              </Button>
+              <Button Grid.Column="5"
+                      Classes="icon_button"
                       Width="14"
                       Margin="8,0"
                       Command="{Binding CreateNewTag}" 
